--- a/Fishbrain.Rmd
+++ b/Fishbrain.Rmd
@@ -7,17 +7,11 @@ output:
 date: "2023-06-09"
 ---
 
-Install viridis package
-```{r}
-install.packages("viridis")
-```
-
 Load packages
 ```{r}
 library(tidyverse)
 library(dplyr)
 library(ggplot2)
-library(viridis)
 ```
 
 Read in Fishbrain data
@@ -132,6 +126,46 @@ recfin_lw %>%
   geom_point() +
   facet_wrap(vars(SPECIES_NAME)) + 
   labs(x = "Length (mm)", y = "Weight (g)")
+```
+
+Read in GIS Data
+```{r}
+fish_gis <- read.csv("fish_gis.csv")
+View(fish_gis)
+```
+
+Length and weight in relation to distance from land/depth
+```{r}
+#Length, distance from land
+fish_gis %>% 
+  ggplot(aes(distance_land, length_in_mm)) +
+  geom_point() + 
+  xlim(0, 20000) +
+  labs(x = "Distance from Land (m)", y = "Length (mm)")
+
+#Weight, distance from land
+fish_gis %>% 
+  ggplot(aes(distance_land, weight_in_g)) +
+  geom_point() + 
+  xlim(0, 20000) +
+  labs(x = "Distance from Land (m)", y = "Weight (g)")
+
+#Length, depth
+fish_gis %>% 
+  ggplot(aes(depth, length_in_mm)) +
+  geom_point() + 
+  scale_x_reverse() +
+  xlim(0, -100) +
+  labs(x = "Depth (m)", y = "Length (mm)")
+
+#Weight, depth
+fish_gis %>% 
+  ggplot(aes(depth, weight_in_g)) +
+  geom_point() + 
+  scale_x_reverse() +
+  xlim(0, -100) +
+  ylim(0, 125000)
+  labs(x = "Depth (m)", y = "Weight (g)")
 ```
 
 Number of fish by district - Fishbrain & RecFIN
